# templify

./: .gitattributes  .gitignore  .phil-project  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile-dev  LICENSE  README.md  install  installer.sh  test
.devcontainer/: devcontainer.json
.githooks/: pre-commit  prepare-commit-msg
.github/: pull_request_template.md
.github/workflows/: check_rust_quality.yml  nightly_build.yml  on_release.yml
.templates/: README.md
.templates/Command/: .templify
.templates/Type/: $$name.snake$$.rs  .templify
scripts/: build-nightly  comment-check  format  format-check  lint  setup  test  tpyd  verify.sh
scripts/py/: build_nightly.py  check_comment.py
src/: command_storage.rs  commands.rs  data.rs  env.rs  executer.rs  formater.rs  global_flag_storage.rs  lib.rs  logger.rs  main.rs  placeholder_storage.rs  types.rs  utils.rs  version_control.rs
src/commands/: command_storage.rs  generate.rs  help.rs  init.rs  list.rs  load.rs  mod.rs  new.rs  placeholder.rs  reload.rs  update.rs  version.rs
src/types/: argument.rs  command.rs  flag.rs  generate_types.rs  global_flag.rs  load_types.rs  mod.rs  placeholder_definition.rs  snippet.rs  status.rs  template_meta.rs  var_placeholder.rs  var_placeholder_collection.rs  version_number.rs
src/utils/: formater.rs  functions.rs  mod.rs  rest.rs  template_handler.rs  version_control.rs
tests/: suite.rs
tests/command_tests/: generate_test.rs  help_test.rs  init_test.rs  list_test.rs  load_test.rs  mod.rs  new_test.rs  reload_test.rs  version_test.rs
tests/common/: fs.rs  log.rs  (+1 more)
(+2 files in other folders)
