[package]
name = "templify"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
self-replace = "1.3.6"
serde_json = "1.0.1"
chrono = "0.4.19"
