[package]
name = "templify"
version = "2.0.0"
edition = "2021"


[[test]]
name = "command_tests"
path = "tests/suite.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
self-replace = "1.3.6"
serde_json = "1.0.1"
chrono = "0.4.19"
base64 = "0.21.7"
regex = "1.11.1"
yaml-rust = "0.4.5"
indexmap = "1.9"
